bugfix footer overlapping

--- a/src/app/home/footer/footer.component.scss
+++ b/src/app/home/footer/footer.component.scss
@@ -1,9 +1,7 @@
 footer {
     font-size: 13px;
-    position: absolute;
-    width: 100%;
-    margin: 0 !important;
-    bottom: 0;
+    max-height: 50px;
+    margin-bottom: 1px !important;
 }
 footer a {
     text-decoration: none;
