--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,9 +6,6 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 
-html, body {
-    height: 100%;
-}
 body {
     padding-top: 70px;
     background-color: #F5F5F5;
